fix: flex-gap emulate

--- a/css/modules/design/box/container.css
+++ b/css/modules/design/box/container.css
@@ -1,8 +1,15 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5rem;
-    margin-bottom: 0.5rem;
+
+    /* gap: 0.5rem */
+    margin: -0.5rem 0 0.5rem -0.5rem;
+    width: calc(100% + 0.5rem);
+}
+
+.container > * {
+    /* gap: 0.5rem */
+    margin: 0.5rem 0 0 0.5rem;
 }
 
 .container_top {
